front end update for 2018

--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <title>Document</title>
+  <meta name="description" content="A meta description">
+
+  <link rel="stylesheet" href="./assets/dist/css/main.css">
+
+  <link rel="home" href="http://www.siteurl.com" />
+  <link rel="canonical" href="http://www.siteurl.com/path/to/page" />
 </head>
 <body>
   
+  <noscript>
+    <div class="o-site-warning">
+      Please enable JavaScript.
+    </div>
+  </noscript>
+
+  <!--[if lte IE 9]>
+		<div class="o-site-warning">
+			<p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+		</div>
+  <![endif]-->
+
+  <a href="#site-content" class="o-skip-to-content u-sr-only">Skip to content</a>
+  
+  <header id="site-header" class="o-site-header" role="banner">
+    <div class="l-wrap">
+      <div class="l-col">
+        <h1>Front End Framework</h1>
+      </div>
+    </div>
+  </header>
+
+  <main id="site-content" class="o-site-main" role="main">
+
+  </main>
+
+  <footer id="site-footer" class="o-site-footer" role="contentinfo">
+
+  </footer>
+
+  <script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
+  <script src="./assets/dist/js/main.js"></script>
 </body>
 </html>
